--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body class="text-dark-electric-blue">
         <header class="max-w-outer lg:mx-auto relative">
-            <div class="absolute top-0 left-0 w-full lg:max-w-[61.125rem] h-[40rem] lg:h-full bg-gradient-to-tl from-skyblue to-transparent rounded-b-4xl"></div>
+            <div class="absolute top-0 left-0 w-full lg:max-w-[61.125rem] h-[40rem] lg:h-full bg-gradient-to-tl from-skyblue rounded-b-4xl"></div>
             <div class="max-w-inner lg:min-h-[46.0625rem] mx-auto relative grid justify-center lg:block">
                 <div class="pt-8 lg:pt-[4.6875rem] mb-6 mx-6 lg:m-0 flex flex-col items-center lg:items-start">
                     <img class="size-10 lg:size-16" src="/images/logo.svg" alt="Logo" />
