--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         </header>
 
         <main>
-            <section class="mt-20 md:mt-24 lg:mt-16" role="article">
+            <section class="mt-20 md:mt-24 lg:mt-16">
                 <div class="lg:max-w-inner mx-auto flex flex-col gap-12 lg:gap-[8.1875rem] md:-ml-20 md:flex-row md:items-center lg:ml-auto relative">
                     <img class="hidden absolute right-0 top-0 -translate-x-7 -translate-y-[3.25rem] lg:block" src="/images/pattern-curved-line-left.svg" alt="" />
                     <div class="container mx-auto">
@@ -132,7 +132,7 @@
                 </div>
             </section>
 
-            <section class="mx-auto max-w-outer mt-16 md:mt-24 bg-gradient-to-r from-transparent to-skyblue-soft rounded-b-4xl" role="article">
+            <section class="mx-auto max-w-outer mt-16 md:mt-24 bg-gradient-to-r from-transparent to-skyblue-soft rounded-b-4xl">
                 <div class="container lg:max-w-inner mx-auto py-14 px-6 lg:px-0 lg:pt-[4.5rem] lg:pb-24">
                     <div class="flex flex-col gap-10 lg:gap-8 lg:flex-row">
                         <div class="flex flex-col flex-1 gap-8 lg:gap-[2.8125rem] md:flex-row lg:flex-col">
@@ -166,7 +166,7 @@
                 </div>
             </section>
 
-            <section class="my-20 md:mt-24 lg:mt-[7.6rem]" role="article">
+            <section class="my-20 md:mt-24 lg:mt-[7.6rem]">
                 <div class="container lg:max-w-inner mx-auto px-6 lg:px-0">
                     <div class="grid gap-4 justify-items-center md:grid-cols-2 md:gap-y-6 lg:gap-x-8 lg:grid-cols-12">
                         <div class="mb-14 space-y-10 md:col-span-2 lg:col-span-6">
